# maker-checker

./: .gitignore  README.md  config.toml  dashboard.py  maker_checker.py  pyproject.toml
briefs/: task.md
maker_checker_app/: __init__.py  bootstrap.py  cli.py  config.py  dashboard.py  git_ops.py  models.py  resources.py  runtime.py  text.py
maker_checker_app/dashboard_static/: app.js  index.html  styles.css
maker_checker_app/defaults/briefs/: evaluation.md
maker_checker_app/defaults/templates/stages/: critique.md  discover.md  evaluate.md  execute.md  plan.md  revise.md  verify.md
templates/stages/: critique.md  plan.md  revise.md  verify.md
tests/: test_maker_checker.py
