[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maker-checker"
version = "0.1.0"
description = "Maker-checker orchestrator for Codex and Claude workflows."
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
maker-checker = "maker_checker_app.cli:main"
maker-checker-dashboard = "maker_checker_app.dashboard:main"
maker-checker-init = "maker_checker_app.bootstrap:main"

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-timeout>=2.2"]

[tool.setuptools]
include-package-data = true
py-modules = ["maker_checker", "dashboard"]

[tool.setuptools.packages.find]
include = ["maker_checker_app*"]
namespaces = true

[tool.setuptools.package-data]
maker_checker_app = [
  "dashboard_static/*.css",
  "dashboard_static/*.html",
  "dashboard_static/*.js",
  "defaults/briefs/*.md",
  "defaults/templates/stages/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30
